--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="myCanvas"> </canvas>
+    <script src="controls.js"></script>
     <script src="car.js"></script>
     <script src="index.js"></script>
   </body>
